--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS Script papildomas darbas</title>
-    <script src="scripts/main.js" defer></script>
+    <script type = "module" src="scripts/main.js" defer></script>
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
